--- a/style.css
+++ b/style.css
@@ -13,12 +13,29 @@ textarea {
   padding: 10px;
 }
 
+.current-date {
+  font-weight: bold;
+  font-size: 16pt;
+}
+
+.container {
+ display: flex;
+ justify-content: center;  
+}
+
+.form {
+  width: 100%;
+  display: block;
+  text-align: center;
+}
+
 .jumbotron {
   text-align: center;
   background-color: transparent;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
+  padding-bottom: 20px;
 }
 
 .description {
@@ -44,28 +61,29 @@ textarea {
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
-  color: white;
+  background-color: #0dbde9;
+  color: white; 
 }
 
-.saveBtn i:hover {
+.saveBtn:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
+  background-color: #25d1fc;
 }
